--- a/README
+++ b/README
@@ -20,7 +20,7 @@ SYNOPSIS
       $class->functions();
       $class->function_refs();
       $class->function_exists( 'function' );
-      $class->methods();
+      $class->methods( 'public', 'full' );
       
       # Class::ISA type methods
       $class->super_path();
@@ -163,13 +163,18 @@ METHODS
     0 if the function does not exist. Returns undef on error, or if
     the class is not loaded.
 
-  methods()
+  methods( @options )
 
     Attempts to find the methods available to the class. This
     includes everything in the classes super path up to, but NOT
     including, UNIVERSAL. Returns a reference to an array of the
     names of all the available methods on success. Returns undef if
     the class is not loaded.
+
+    Any provided options are passed through, and alter the response
+    in the same way as for the options to `Class::Inspector-
+    'methods()>, that is, 'public', 'private', 'full' and
+    'expanded', and combinations thereof.
 
   super_path()
 
