Import of ADAMK/Class-Handle-0.4 from CPAN.
gitpan-cpan-distribution: Class-Handle
gitpan-cpan-version:      0.4
gitpan-cpan-path:         ADAMK/Class-Handle-0.4.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -25,7 +25,7 @@ SYNOPSIS
       # Class::ISA type methods
       $class->super_path();
       $class->self_and_super_path();
-      $class->full_path();
+      $class->full_super_path();
   
       # Loading and unloading
       $class->load();
