--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Class::Handle.
 
+1.03 Wed Jul 21 2004
+	- Tweaking the tests to work properly on Win32
+
 1.02 Wed Jul 21 2004
 	- Forcing the use of the newest 1.06 version of Class::Inspector
 
